# ree-pak-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
ree-pak-cli/: Cargo.toml
ree-pak-cli/src/: main.rs  pack.rs  unpack.rs
ree-pak-core/: Cargo.toml
ree-pak-core/benches/: utf16_hash_bench.rs
ree-pak-core/src/: error.rs  extract.rs  filename.rs  hasher.rs  lib.rs  pakfile.rs  serde_util.rs  utf16_hash.rs
ree-pak-core/src/compression/: mod.rs
ree-pak-core/src/pak/: cipher.rs  compression.rs  entry.rs  flag.rs  header.rs  mod.rs
ree-pak-core/src/pak/cipher/: mod.rs  pak.rs  resource.rs
ree-pak-core/src/read/: archive.rs  chunk_table.rs  compressed.rs  encrypted.rs  entry.rs  extension.rs  mod.rs
ree-pak-core/src/read/io/: archive.rs  compressed.rs  encrypted.rs  entry.rs  extension.rs  mod.rs
ree-pak-core/src/spec/: entry.rs  header.rs  mod.rs
ree-pak-core/src/write/: mod.rs
