[package]
name = "ree-pak-cli"
version = "0.2.3"
edition = "2024"
rust-version = "1.85"

[dependencies]
ree-pak-core = { path = "../ree-pak-core" }

clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
anyhow.workspace = true
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread"] }
threadpool = "1.8.1"
rayon.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
