[package]
name = "ree-pak-cli"
version = "0.2.6"
edition = "2024"
rust-version = "1.85"

[dependencies]
ree-pak-core = { path = "../ree-pak-core" }

anyhow.workspace = true
rayon.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
parking_lot.workspace = true
walkdir.workspace = true
indexmap.workspace = true

clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread"] }
regex = "1.11.1"
