[package]
name = "ree-pak-cli"
version = "0.2.9"
edition = "2024"
rust-version = "1.88"

[dependencies]
ree-pak-core = { path = "../ree-pak-core" }

rayon.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
parking_lot.workspace = true
walkdir.workspace = true
indexmap.workspace = true

clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
tokio = { version = "1.49", features = ["macros", "rt", "rt-multi-thread"] }
regex = "1.11"
memmap2 = "0.9"
color-eyre = "0.6"
