[package]
name = "ree-pak-core"
version = "0.4.2"
edition = "2024"
rust-version = "1.85"

[dependencies]
byteorder.workspace = true
murmur3.workspace = true
nohash.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
rayon.workspace = true
bitflags.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }

# compression
zstd.workspace = true
flate2 = "1.0"

num = { version = "0.4", features = ["num-bigint"] }
indexmap = "2.8"
derive_more = { version = "2.0.1", features = ["debug"] }
zerocopy.workspace = true
