[package]
name = "ree-pak-core"
version = "0.6.1"
edition = "2024"
rust-version = "1.88"

[dependencies]
byteorder.workspace = true
murmur3.workspace = true
nohash.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
rayon.workspace = true
bitflags = "2.9"
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
memmap2 = "0.9"

# compression
zstd.workspace = true
flate2 = "1.0"

num = { version = "0.4", features = ["num-bigint"] }
indexmap = "2.8"
derive_more = { version = "2.0", features = ["debug"] }
zerocopy.workspace = true
static_assertions = "1.1"

[dev-dependencies]
criterion = "0.7"

[features]
default = []
legacy-utf16-hash = []

# enable legacy-utf16-hash feature for legacy comparison
[[bench]]
name = "utf16_hash_bench"
harness = false
